# notebooks

./: .gitignore  .gitmodules  AllpassDelay.py  Delay.py  DelayLine.py  Filters.py  Generators.py  InterpolatingDelayLine.py  Pipfile  PlotUtils.py  PoleZeroFilter.py  README.md  SamplePlayer.py  WavPlayer.py  ipython_animation.py  logistic_loss_function_animation.ipynb  requirements.txt  test_audio.ipynb
THX/: thx_sound.ipynb
accelerated_c++/: chapter_0.ipynb  chapter_3.ipynb  index.ipynb
coding_the_matrix/: .gitignore  QR.py  bitutil.py  dictutil.py  image.py  independence.py  index.ipynb  mat.py  mat_sparsity.py  orthogonalization.py  orthonormalization.py  solver.py
dft-timeseries/: DftTimeseries.ipynb  Resynthesis.ipynb  dft.py
intro_to_dft/: host-data.csv  intro_to_dft.ipynb
intro_to_linear_algebra/: README.md  chapter_1.jl
introduction_to_digital_filters/: appendix_b_elementary_audio_digital_filters.ipynb  chapter_1_the_simplest_lowpass_filter.ipynb  chapter_2_matlab_analysis_of_the_simplest_lowpass_filter.ipynb  chapter_3_analysis_of_a_digital_comb_filter.ipynb  chapter_4_linear_time_invariant_filters.ipynb  chapter_5_time_domain_representations.ipynb  chapter_6_transfer_function_analysis.ipynb  chapter_7_frequency_response_analysis.ipynb  chapter_8_pole_zero_analysis.ipynb  chapter_9_implementation_structures.ipynb  chapters_10_11_filters_preserving_phase.ipynb  index.ipynb  plot_utils.py
musimathics/: ADSR.py  (+11 more)
physical_audio_signal_processing/cpp/: .gitignore  CMakeLists.txt  Chapter1LabEffect.h  FDNJot4.h  FDNJot4LP.h  Rev.h  RevLP.h  main.cpp
(+314 files in other folders)
